--- a/EstatisticaParaDataScience_Cap3.ipynb
+++ b/EstatisticaParaDataScience_Cap3.ipynb
@@ -21,7 +21,7 @@
         "id": "ocRDXXC6OpkC"
       },
       "source": [
-        ""
+        "# Capítulo 3 - Estatística Descritiva: Medidas de Tendência Central e de Dispersão"
       ]
     },
     {
