--- a/EstatisticaParaDataScience_Cap4.ipynb
+++ b/EstatisticaParaDataScience_Cap4.ipynb
@@ -26,11 +26,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
-        "id": "3JGEJzg-99q1"
+        "id": "3JGEJzg-99q1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5751630a-252e-49d1-de04-ab81d469e127"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The rpy2.ipython extension is already loaded. To reload it, use:\n",
+            "  %reload_ext rpy2.ipython\n"
+          ]
+        }
+      ],
       "source": [
         "# Habilita a execução de R no Google Colab\n",
         "%load_ext rpy2.ipython"
@@ -63,9 +76,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7P2sg0tY-s8V",
-        "outputId": "e4a1735d-6e92-4f70-e626-5fac3fe44ee8"
+        "outputId": "36e523a2-d20d-40ca-8811-8c027cf3a02c"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -82,6 +95,36 @@
     {
       "cell_type": "code",
       "source": [
+        "# Criando um dado de 6 faces a ser\n",
+        "dado = [x for x in range(1,7)]\n",
+        "# Selecionando só as faces pares (o operador % representa o resto da divisão)\n",
+        "[x for x in dado if x%2==0]\n",
+        "# TODO: imprimir também as probabilidades"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0ty7w87ebnj-",
+        "outputId": "18ae0940-b013-4e86-94d4-a08231cb667a"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[2, 4, 6]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "%%R\n",
         "# Carregando a biblioteca\n",
         "library(prob)\n",
@@ -91,7 +134,7 @@
         "# União dos eventos A e B\n",
         "uniao = union(A,B)\n",
         "print(uniao)\n",
-        "# Interseção entre os conjuntos A e B\n",
+        "# Interseção dos eventos A e B\n",
         "intersecao = intersect(A,B)\n",
         "print(intersecao)"
       ],
@@ -102,7 +145,7 @@
         "id": "1tA2hP4Po5X1",
         "outputId": "3cb4ae41-d453-4e89-9c03-b1a2016495ef"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,6 +153,38 @@
           "text": [
             "[1] 2 4 5 6\n",
             "[1] 4 6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Criando os eventos\n",
+        "A = [x for x in dado if x%2==0]\n",
+        "B = [x for x in dado if x>3]\n",
+        "# União dos eventos A e B\n",
+        "uniao = set(A).union(set(B))\n",
+        "print(uniao)\n",
+        "# Interseção dos eventos A e B\n",
+        "intersecao = set(A).intersection(set(B))\n",
+        "print(intersecao)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gwL-dzEJxmXW",
+        "outputId": "0ae9d81a-a0f4-4e8a-b52f-b744e6c97c55"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{2, 4, 5, 6}\n",
+            "{4, 6}\n"
           ]
         }
       ]
@@ -132,7 +207,8 @@
         "# Sendo H do inglês \"Head\" que significa \"cara\"\n",
         "# Sendo T do inglês \"Tail\" que significa \"coroa\"\n",
         "# Cria e imprime o espaço amostral para um lançamento de moedas\n",
-        "moedas = tosscoin(3, makespace = F)\n",
+        "qtd_moedas = 3\n",
+        "moedas = tosscoin(qtd_moedas, makespace = F)\n",
         "print(moedas)\n",
         "# Selecionando as linhas 2, 3 e 5 (que têm duas caras) e todas as colunas do dataframe moedas\n",
         "duas_caras = moedas[c(2,3,5),]\n",
@@ -144,9 +220,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1KuCcpGupnDf",
-        "outputId": "98316331-370b-4725-981d-286d2b7d9a3d"
+        "outputId": "ebe4a7e0-e9b3-4a27-92f0-04fb4c7745d5"
       },
-      "execution_count": 5,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,6 +238,67 @@
             "7     H     T     T\n",
             "8     T     T     T\n",
             "[1] 0.375\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Imports necessários\n",
+        "import math\n",
+        "import itertools\n",
+        "import pandas as pd\n",
+        "from collections import Counter\n",
+        "\n",
+        "# Sendo H do inglês \"Head\" que significa \"cara\"\n",
+        "# Sendo T do inglês \"Tail\" que significa \"coroa\"\n",
+        "# Cria e imprime o espaço amostral para um lançamento de moedas\n",
+        "qtd_moedas = 3\n",
+        "moedas = [x for x in (\"H\",\"T\")] # H=head(cara) e T=tail(coroa)\n",
+        "# Número de combinações possíveis\n",
+        "comb = int(math.pow(len(moedas),qtd_moedas))\n",
+        "\n",
+        "# Cria matriz vazia\n",
+        "mres = [[0] * qtd_moedas for i in range(comb)]\n",
+        "\n",
+        "# Combinações possíveis\n",
+        "iterables = [ [\"H\",\"T\"], [\"H\",\"T\"], [\"H\",\"T\"] ]\n",
+        "for t, i in zip(itertools.product(*iterables), range(0,comb)):\n",
+        "    mres[i] = t\n",
+        "\n",
+        "mres = pd.DataFrame(mres, columns = [\"M1\",\"M2\",\"M3\"])\n",
+        "print(mres)\n",
+        "\n",
+        "# Selecionando as linhas que têm duas caras\n",
+        "mres[\"Qtd_H\"] = mres.apply(lambda row: Counter(row)[\"H\"], axis = 1)\n",
+        "# Calculando a probabilidade desejada\n",
+        "p2h = mres[mres[\"Qtd_H\"]==2].shape[0]/mres.shape[0]\n",
+        "print(p2h)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fz2wWkgn1jaL",
+        "outputId": "db419c35-b8cb-4844-ee53-96c04a106c2a"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  M1 M2 M3\n",
+            "0  H  H  H\n",
+            "1  H  H  T\n",
+            "2  H  T  H\n",
+            "3  H  T  T\n",
+            "4  T  H  H\n",
+            "5  T  H  T\n",
+            "6  T  T  H\n",
+            "7  T  T  T\n",
+            "0.375\n"
           ]
         }
       ]
@@ -186,7 +323,7 @@
         "id": "GHteCDLJp1UU",
         "outputId": "b7ca2044-1deb-408e-b2a9-e778a4968c6a"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -217,7 +354,7 @@
         "id": "JOHzlqBfp5RY",
         "outputId": "6c1c9bab-543f-4337-d81f-f8b94a4b18d4"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -254,7 +391,7 @@
         "id": "Ebcx8Z81q8Fs",
         "outputId": "2b50a8c6-a6ad-4140-c1a3-4e34682b7f48"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -279,13 +416,13 @@
         "print(bayes)"
       ],
       "metadata": {
+        "id": "SudsHCY2q_sS",
+        "outputId": "904a5413-77fc-4a40-e43c-589b717c7411",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "SudsHCY2q_sS",
-        "outputId": "904a5413-77fc-4a40-e43c-589b717c7411"
+        }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
