--- a/EstatisticaParaDataScience_Cap4.ipynb
+++ b/EstatisticaParaDataScience_Cap4.ipynb
@@ -26,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "3JGEJzg-99q1",
         "colab": {
@@ -78,7 +78,7 @@
         "id": "7P2sg0tY-s8V",
         "outputId": "36e523a2-d20d-40ca-8811-8c027cf3a02c"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,7 +108,7 @@
         "id": "0ty7w87ebnj-",
         "outputId": "18ae0940-b013-4e86-94d4-a08231cb667a"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -177,7 +177,7 @@
         "id": "gwL-dzEJxmXW",
         "outputId": "0ae9d81a-a0f4-4e8a-b52f-b744e6c97c55"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,7 +222,7 @@
         "id": "1KuCcpGupnDf",
         "outputId": "ebe4a7e0-e9b3-4a27-92f0-04fb4c7745d5"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -245,7 +245,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Imports necessários\n",
+        "# Imports de bibliotecas\n",
         "import math\n",
         "import itertools\n",
         "import pandas as pd\n",
@@ -283,7 +283,7 @@
         "id": "fz2wWkgn1jaL",
         "outputId": "db419c35-b8cb-4844-ee53-96c04a106c2a"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
