--- a/EstatisticaParaDataScience_Cap8.ipynb
+++ b/EstatisticaParaDataScience_Cap8.ipynb
@@ -435,7 +435,7 @@
         "\n",
         "# Exibindo os resultados do teste\n",
         "print(\"Estatística de teste U:\", stat)\n",
-        "print(\"Valor-p:\", p_valor)\n",
+        "print(\"p-valor:\", p_valor)\n",
         "\n",
         "# Interpretando o resultado\n",
         "alpha = 0.05  # Nível de significância escolhido\n",
@@ -458,7 +458,7 @@
           "name": "stdout",
           "text": [
             "Estatística de teste U: 32.0\n",
-            "Valor-p: 1.0\n",
+            "p-valor: 1.0\n",
             "Não há evidência suficiente para rejeitar a hipótese nula: As distribuições das amostras são estatisticamente iguais\n"
           ]
         }
