--- a/EstatisticaParaDataScience_Cap8.ipynb
+++ b/EstatisticaParaDataScience_Cap8.ipynb
@@ -126,7 +126,7 @@
         "# Realizando o Teste de Shapiro-Wilk\n",
         "shapiro_statistic, p_value = stats.shapiro(amostra)\n",
         "\n",
-        "print(f\"Estatística do teste de Shapiro-Wilk: {shapiro_statistic}\")\n",
+        "print(f\"Estatística do teste de Shapiro-Wilk (S-W): {shapiro_statistic}\")\n",
         "print(f\"p-valor: {p_value}\")\n",
         "\n",
         "# Interpretando o resultado\n",
@@ -140,15 +140,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "da888687-880e-4587-c5d3-87ca96563af5"
+        "outputId": "976bc80b-d98a-49d4-ee39-2dcd79164d1e"
       },
-      "execution_count": 12,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Estatística do teste de Shapiro-Wilk: 0.9606984257698059\n",
+            "Estatística do teste de Shapiro-Wilk (S-W): 0.9606984257698059\n",
             "p-valor: 0.32273441553115845\n",
             "A distribuição é normal, pois de acordo com o teste, não há evidências suficientes para rejeitar a hipótese de normalidade.\n"
           ]
