--- a/EstatisticaParaDataScience_Cap8.ipynb
+++ b/EstatisticaParaDataScience_Cap8.ipynb
@@ -44,7 +44,7 @@
         "# Habilita a execução de R no Google Colab\n",
         "%load_ext rpy2.ipython"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -77,7 +77,8 @@
         "print(f\"p-valor: {p_value}\")\n",
         "\n",
         "# Interpretando o resultado\n",
-        "if p_value > 0.05:\n",
+        "alpha = 0.05  # Nível de significância escolhido\n",
+        "if p_value < alpha:\n",
         "    print(\"A distribuição é normal, pois de acordo com o teste, não há evidências suficientes para rejeitar a hipótese de normalidade.\")\n",
         "else:\n",
         "    print(\"A distribuição não pode ser considerada normal, pois de acordo com o teste, rejeita-se a hipótese de normalidade.\")"
@@ -87,9 +88,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2cfdcb6d-0dbe-4aae-f995-342d863e20e4"
+        "outputId": "0382b968-6a96-4379-eee3-4e2bf4692ecf"
       },
-      "execution_count": 11,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,7 +98,7 @@
           "text": [
             "Estatística do teste KS: 0.7485711049046899\n",
             "p-valor: 1.8167127952549e-29\n",
-            "A distribuição não pode ser considerada normal, pois de acordo com o teste, rejeita-se a hipótese de normalidade.\n"
+            "A distribuição é normal, pois de acordo com o teste, não há evidências suficientes para rejeitar a hipótese de normalidade.\n"
           ]
         }
       ]
@@ -130,7 +131,8 @@
         "print(f\"p-valor: {p_value}\")\n",
         "\n",
         "# Interpretando o resultado\n",
-        "if p_value > 0.05:\n",
+        "alpha = 0.05  # Nível de significância escolhido\n",
+        "if p_value < alpha:\n",
         "    print(\"A distribuição é normal, pois de acordo com o teste, não há evidências suficientes para rejeitar a hipótese de normalidade.\")\n",
         "else:\n",
         "    print(\"A distribuição não pode ser considerada normal, pois de acordo com o teste, rejeita-se a hipótese de normalidade.\")"
@@ -140,9 +142,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "976bc80b-d98a-49d4-ee39-2dcd79164d1e"
+        "outputId": "20d69cde-bb8a-4816-8d26-8c23e0bac433"
       },
-      "execution_count": 1,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -150,7 +152,7 @@
           "text": [
             "Estatística do teste de Shapiro-Wilk (S-W): 0.9606984257698059\n",
             "p-valor: 0.32273441553115845\n",
-            "A distribuição é normal, pois de acordo com o teste, não há evidências suficientes para rejeitar a hipótese de normalidade.\n"
+            "A distribuição não pode ser considerada normal, pois de acordo com o teste, rejeita-se a hipótese de normalidade.\n"
           ]
         }
       ]
@@ -181,7 +183,8 @@
         "print(f\"p-valor: {p_value}\")\n",
         "\n",
         "# Interpretando o resultado\n",
-        "if p_value > 0.05:\n",
+        "alpha = 0.05  # Nível de significância escolhido\n",
+        "if p_value < alpha:\n",
         "    print(\"As variâncias são homogêneas. Não há evidências suficientes para rejeitar a hipótese nula.\")\n",
         "else:\n",
         "    print(\"As variâncias não são homogêneas. Rejeita-se a hipótese nula, indicando diferenças significativas nas variâncias entre os grupos.\")"
@@ -191,9 +194,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "01aa013f-d9ab-4cba-a371-41e0422daa26"
+        "outputId": "75d38062-607e-47ae-d029-8ebaf9d1e414"
       },
-      "execution_count": 13,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,7 +204,7 @@
           "text": [
             "Estatística do teste: 5.507970293902395e-29\n",
             "p-valor: 1.0\n",
-            "As variâncias são homogêneas. Não há evidências suficientes para rejeitar a hipótese nula.\n"
+            "As variâncias não são homogêneas. Rejeita-se a hipótese nula, indicando diferenças significativas nas variâncias entre os grupos.\n"
           ]
         }
       ]
@@ -243,9 +246,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "O1CLT9yZoUEU",
-        "outputId": "9f1af405-08d8-4f1f-a845-792c92e66188"
+        "outputId": "fbff7a34-5bb4-475b-ae54-c726392e4e51"
       },
-      "execution_count": 15,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -296,9 +299,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8eb9856a-0162-4364-c50f-0554dce09156"
+        "outputId": "0c014ead-7d06-44b5-9cd2-a003d91040c4"
       },
-      "execution_count": 16,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -341,9 +344,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ODEtVFm0plLH",
-        "outputId": "cb6b17e4-11d1-4ff4-dab5-b5ce8c2af09c"
+        "outputId": "069d2ac7-6727-47a7-e1c2-425e53074734"
       },
-      "execution_count": 22,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -383,9 +386,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2Zyapxpsr_tM",
-        "outputId": "0e5972df-55ba-4362-f394-2489d3363c05"
+        "outputId": "fe21703f-60a1-4149-ae4f-5d5481a1571e"
       },
-      "execution_count": 24,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -441,16 +444,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ff3677ee-0f27-4dec-ff84-a81f8d44b089"
+        "outputId": "5b2e8006-a3cd-430c-e611-40618a58310a"
       },
-      "execution_count": 25,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Estatística de teste: 510.0\n",
-            "p-valor: 0.37903631077393585\n",
+            "Estatística de teste: 571.0\n",
+            "p-valor: 0.07482700800490434\n",
             "Não há evidência suficiente para rejeitar a hipótese nula: as acurácias são estatisticamente iguais\n"
           ]
         }
@@ -504,9 +507,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "58ac4542-4a33-4be7-da2b-98ffb5557138"
+        "outputId": "3e116862-730a-407d-844c-a28799b97fd3"
       },
-      "execution_count": 33,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -572,9 +575,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "33424b7f-a666-4baf-c717-2abe0013dce4"
+        "outputId": "8dc17536-9379-45ec-c3e1-8747c5d1a0b2"
       },
-      "execution_count": 45,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
