--- a/EstatisticaParaDataScience_Cap8.ipynb
+++ b/EstatisticaParaDataScience_Cap8.ipynb
@@ -78,7 +78,7 @@
         "\n",
         "# Interpretando o resultado\n",
         "alpha = 0.05  # Nível de significância escolhido\n",
-        "if p_value < alpha:\n",
+        "if p_value > alpha:\n",
         "    print(\"A distribuição é normal, pois de acordo com o teste, não há evidências suficientes para rejeitar a hipótese de normalidade.\")\n",
         "else:\n",
         "    print(\"A distribuição não pode ser considerada normal, pois de acordo com o teste, rejeita-se a hipótese de normalidade.\")"
@@ -88,9 +88,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0382b968-6a96-4379-eee3-4e2bf4692ecf"
+        "outputId": "7f21be0d-fc31-49c8-e9b7-3587ef59a201"
       },
-      "execution_count": 3,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,7 +98,7 @@
           "text": [
             "Estatística do teste KS: 0.7485711049046899\n",
             "p-valor: 1.8167127952549e-29\n",
-            "A distribuição é normal, pois de acordo com o teste, não há evidências suficientes para rejeitar a hipótese de normalidade.\n"
+            "A distribuição não pode ser considerada normal, pois de acordo com o teste, rejeita-se a hipótese de normalidade.\n"
           ]
         }
       ]
@@ -132,7 +132,7 @@
         "\n",
         "# Interpretando o resultado\n",
         "alpha = 0.05  # Nível de significância escolhido\n",
-        "if p_value < alpha:\n",
+        "if p_value > alpha:\n",
         "    print(\"A distribuição é normal, pois de acordo com o teste, não há evidências suficientes para rejeitar a hipótese de normalidade.\")\n",
         "else:\n",
         "    print(\"A distribuição não pode ser considerada normal, pois de acordo com o teste, rejeita-se a hipótese de normalidade.\")"
@@ -142,9 +142,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "20d69cde-bb8a-4816-8d26-8c23e0bac433"
+        "outputId": "b049628b-7081-42c8-9938-e22d653ccbd1"
       },
-      "execution_count": 4,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -152,7 +152,7 @@
           "text": [
             "Estatística do teste de Shapiro-Wilk (S-W): 0.9606984257698059\n",
             "p-valor: 0.32273441553115845\n",
-            "A distribuição não pode ser considerada normal, pois de acordo com o teste, rejeita-se a hipótese de normalidade.\n"
+            "A distribuição é normal, pois de acordo com o teste, não há evidências suficientes para rejeitar a hipótese de normalidade.\n"
           ]
         }
       ]
@@ -172,7 +172,7 @@
         "from scipy.stats import levene\n",
         "import numpy as np\n",
         "\n",
-        "# Acurácias simuladas do Modelo A e Modelo B em diferentes conjuntos de dados\n",
+        "# Acurácias simuladas do Modelo A e Modelo B\n",
         "acuracias_modelo_a = np.array([0.82, 0.81, 0.83, 0.84, 0.82, 0.80, 0.81, 0.83, 0.85, 0.82])\n",
         "acuracias_modelo_b = np.array([0.76, 0.77, 0.75, 0.78, 0.76, 0.79, 0.75, 0.77, 0.74, 0.76])\n",
         "\n",
@@ -184,7 +184,7 @@
         "\n",
         "# Interpretando o resultado\n",
         "alpha = 0.05  # Nível de significância escolhido\n",
-        "if p_value < alpha:\n",
+        "if p_value > alpha:\n",
         "    print(\"As variâncias são homogêneas. Não há evidências suficientes para rejeitar a hipótese nula.\")\n",
         "else:\n",
         "    print(\"As variâncias não são homogêneas. Rejeita-se a hipótese nula, indicando diferenças significativas nas variâncias entre os grupos.\")"
@@ -194,9 +194,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "75d38062-607e-47ae-d029-8ebaf9d1e414"
+        "outputId": "6e3fff91-c036-453b-c2bb-8bc45da3e2db"
       },
-      "execution_count": 5,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,7 +204,7 @@
           "text": [
             "Estatística do teste: 5.507970293902395e-29\n",
             "p-valor: 1.0\n",
-            "As variâncias não são homogêneas. Rejeita-se a hipótese nula, indicando diferenças significativas nas variâncias entre os grupos.\n"
+            "As variâncias são homogêneas. Não há evidências suficientes para rejeitar a hipótese nula.\n"
           ]
         }
       ]
@@ -331,6 +331,7 @@
         "\n",
         "# Acurácias de três modelos de Machine Learning e seus respectivos grupos\n",
         "acuracias = np.array([0.82, 0.81, 0.83, 0.84, 0.82, 0.75, 0.77, 0.76, 0.74, 0.75, 0.89, 0.90, 0.91, 0.88, 0.87])\n",
+        "# Rótulos para identificar as acurácias de cada modelo\n",
         "grupos = ['Modelo A'] * 5 + ['Modelo B'] * 5 + ['Modelo C'] * 5\n",
         "\n",
         "# Aplicando o teste de Tukey\n",
@@ -344,9 +345,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ODEtVFm0plLH",
-        "outputId": "069d2ac7-6727-47a7-e1c2-425e53074734"
+        "outputId": "610710ed-a8ca-4b87-afbe-354cc32a1d80"
       },
-      "execution_count": 8,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -374,6 +375,7 @@
         "# Simulando dados onde as acurácias dos modelos são mais próximas entre si\n",
         "acuracias_similares = np.array([0.82, 0.83, 0.81, 0.82, 0.83, 0.81, 0.82, 0.83, 0.81, 0.82,\n",
         "                                0.82, 0.83, 0.81, 0.82, 0.83])\n",
+        "# Rótulos para identificar as acurácias de cada modelo\n",
         "grupos_similares = ['Modelo X'] * 5 + ['Modelo Y'] * 5 + ['Modelo Z'] * 5\n",
         "\n",
         "# Aplicando o teste de Tukey\n",
@@ -386,9 +388,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2Zyapxpsr_tM",
-        "outputId": "fe21703f-60a1-4149-ae4f-5d5481a1571e"
+        "outputId": "8f6f484a-4507-4c7a-e59e-6dcb45a8dcc0"
       },
-      "execution_count": 9,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
