--- a/EstatisticaParaDataScience_Cap8.ipynb
+++ b/EstatisticaParaDataScience_Cap8.ipynb
@@ -38,14 +38,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PWW_l8-nv3Vh"
+        "id": "PWW_l8-nv3Vh",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "339abb28-4293-445e-fbc0-8792bef721d2"
       },
       "source": [
         "# Habilita a execução de R no Google Colab\n",
         "%load_ext rpy2.ipython"
       ],
-      "execution_count": 2,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The rpy2.ipython extension is already loaded. To reload it, use:\n",
+            "  %reload_ext rpy2.ipython\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -88,9 +101,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7f21be0d-fc31-49c8-e9b7-3587ef59a201"
+        "outputId": "7d9b0828-3827-4857-c772-66e6d30133b6"
       },
-      "execution_count": 19,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,9 +155,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b049628b-7081-42c8-9938-e22d653ccbd1"
+        "outputId": "37dcd186-fd73-4ac1-d2d9-08cdb9d538ab"
       },
-      "execution_count": 20,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -194,9 +207,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6e3fff91-c036-453b-c2bb-8bc45da3e2db"
+        "outputId": "119f8dee-dc01-4830-ffef-371abc336aa2"
       },
-      "execution_count": 21,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -246,9 +259,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "O1CLT9yZoUEU",
-        "outputId": "fbff7a34-5bb4-475b-ae54-c726392e4e51"
+        "outputId": "97720d73-0854-4e0b-8fe3-2eb0b280177e"
       },
-      "execution_count": 6,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -299,9 +312,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0c014ead-7d06-44b5-9cd2-a003d91040c4"
+        "outputId": "b3733ae6-c867-4842-9e14-46ebef09733a"
       },
-      "execution_count": 7,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -345,9 +358,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ODEtVFm0plLH",
-        "outputId": "610710ed-a8ca-4b87-afbe-354cc32a1d80"
+        "outputId": "9eb82002-adf3-40fe-cb43-f16a4db53b61"
       },
-      "execution_count": 23,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -388,9 +401,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2Zyapxpsr_tM",
-        "outputId": "8f6f484a-4507-4c7a-e59e-6dcb45a8dcc0"
+        "outputId": "1b1d7bc6-e8fc-4b3e-df7e-9ca1407a2fe8"
       },
-      "execution_count": 24,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -446,16 +459,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5b2e8006-a3cd-430c-e611-40618a58310a"
+        "outputId": "d0494d3d-a002-433e-a7ab-78caced79222"
       },
-      "execution_count": 10,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Estatística de teste: 571.0\n",
-            "p-valor: 0.07482700800490434\n",
+            "Estatística de teste: 491.0\n",
+            "p-valor: 0.5493267842679926\n",
             "Não há evidência suficiente para rejeitar a hipótese nula: as acurácias são estatisticamente iguais\n"
           ]
         }
@@ -509,9 +522,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3e116862-730a-407d-844c-a28799b97fd3"
+        "outputId": "821f69a1-385b-42f0-b61c-772bf403b42d"
       },
-      "execution_count": 11,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -577,9 +590,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8dc17536-9379-45ec-c3e1-8747c5d1a0b2"
+        "outputId": "21838122-528c-45ce-dc35-1293e503090e"
       },
-      "execution_count": 12,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
